<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_by_date"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:orderInCategory="1"
        android:title="@string/action_search_by_date"
        app:showAsAction="never" />

    <item
        android:id="@+id/search_by_name"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:orderInCategory="2"
        android:title="@string/action_search_by_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/search_by_category"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:orderInCategory="3"
        android:title="@string/action_search_by_category"
        app:showAsAction="never" />

    <item
        android:id="@+id/show_all"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:orderInCategory="4"
        android:title="@string/show_all"
        app:showAsAction="never" />

</menu>