<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/details_cab_cancel"
        android:icon="@drawable/abc_ic_clear_mtrl_alpha"
        android:orderInCategory="1"
        android:title="@string/action_cancel"
        app:showAsAction="always" />

    <item
        android:id="@+id/details_cab_done"
        android:icon="@drawable/action_edit"
        android:orderInCategory="2"
        android:title="@string/abc_action_mode_done"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_modify"
        android:icon="@drawable/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_modify"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/action_discard"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never" />

</menu>