<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/from_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingRight="20dp"
        android:text="Da"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fromEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/from_label"
        android:layout_toRightOf="@+id/from_label"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:onClick="createDateDialog" />

    <TextView
        android:id="@+id/to_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fromEditText"
        android:layout_marginTop="15dp"
        android:paddingRight="20dp"
        android:text="A"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/toEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/fromEditText"
        android:layout_alignLeft="@+id/fromEditText"
        android:layout_alignRight="@+id/fromEditText"
        android:layout_alignStart="@+id/fromEditText"
        android:layout_below="@+id/fromEditText"
        android:layout_marginTop="15dp"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:onClick="createDateDialog" />

    <Spinner
        android:id="@+id/order_by_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toEditText"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/text1"
        android:layout_toRightOf="@+id/text1"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/make_button"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categories_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/make_report"
        android:textSize="15dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/categories_button"
        style="@android:style/Widget.Spinner.DropDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/order_by_spinner"
        android:layout_marginTop="15dp"
        android:onClick="createCategoriesDialog"
        android:text="@string/select_categories" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/order_by_spinner"
        android:layout_marginTop="15dp"
        android:text="@string/order_by"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <Button
        android:id="@+id/openFolderButton"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/make_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="openFolder"
        android:text="Apri cartella" />

</RelativeLayout>